--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "assignment-a2-descriptive-statistics",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "1DV025 - Assignment A2 - Descriptive Statistics",
   "type": "module",
   "main": "src/app.js",
@@ -8,11 +8,7 @@
     "start": "node src/app.js",
     "lint": "npx eslint ./src || exit 0",
     "lint:fix": "npx eslint ./src --fix || exit 0",
-    "test": "npx mocha --recursive || exit 0"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git@gitlab.lnu.se:1dv025/management/template/assignment-a2-descriptive-statistics.git"
+    "test": "npx --node-options=--experimental-vm-modules jest || exit 0"
   },
   "contributors": [
     "Johan Leitet <johan.leitet@lnu.se>",
@@ -22,20 +18,13 @@
   "license": "MIT",
   "private": true,
   "devDependencies": {
-    "@lnu/eslint-config": "^1.1.0",
-    "chai": "^4.2.0",
-    "eslint": "^7.8.1",
-    "eslint-plugin-import": "^2.22.0",
-    "eslint-plugin-jsdoc": "^30.3.3",
+    "@lnu/eslint-config": "^1.1.3",
+    "eslint": "^7.32.0",
+    "eslint-config-standard": "^16.0.3",
+    "eslint-plugin-import": "^2.24.1",
+    "eslint-plugin-jsdoc": "^36.0.7",
     "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-promise": "^4.2.1",
-    "eslint-plugin-standard": "^4.0.1",
-    "mocha": "^8.1.3"
-  },
-  "eslintConfig": {
-    "extends": "@lnu",
-    "env": {
-      "mocha": true
-    }
+    "eslint-plugin-promise": "^5.1.0",
+    "jest": "^27.0.6"
   }
 }
